--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,8 +10,7 @@ if(WIN32)
   set(LIBTCC_LDFLAGS -Wl,-rpath=${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
   add_subdirectory(dll)
 else()
-  set(TCC_MATH_LDFLAGS -lm)
-  set(LIBTCC_LDFLAGS -ldl -Wl,-rpath=${CMAKE_BINARY_DIR})
+  set(LIBTCC_LDFLAGS -Wl,-rpath=${CMAKE_BINARY_DIR})
 endif()
 
 add_subdirectory(thread)
