--- a/cmake_env.sh.in
+++ b/cmake_env.sh.in
@@ -5,3 +5,4 @@ export CPATH=@CMAKE_INSTALL_PREFIX@/bin
 export CMAKE_C_COMPILER=@CMAKE_INSTALL_PREFIX@/tcc
 export CC=$CMAKE_C_COMPILER
 export CMAKE_TOOLCHAIN_FILE=@CMAKE_INSTALL_PREFIX@/share/tcc.cmake
+bash
