--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ if(WIN32)
   set(_fmt ZIP)
 endif()
 
+set(CPACK_SET_DESTDIR true)
 set(CPACK_GENERATOR ${_fmt})
 SET(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
 SET(CPACK_DEB_COMPONENT_INSTALL ON)
@@ -37,6 +38,7 @@ if(WIN32)
     endif()
 endif()
 
+set(CPACK_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
 message(STATUS "Installing to ${CMAKE_INSTALL_PREFIX}")
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_MODULE_PATH})
@@ -124,7 +126,7 @@ if (WIN32)
 endif()
 
 if(UNIX)
-  add_definitions(-Wall -O2 -lpthread -Wno-declaration-after-statement -Wno-pointer-sign -Wno-sign-compare -Wno-unused-result -Wno-unknown-pragmas -Wl,-rpath=${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
+  add_definitions(-Wall -O2 -lpthread -Wno-declaration-after-statement -Wno-pointer-sign -Wno-sign-compare -Wno-unused-result -Wno-unknown-pragmas)
   if(NOT APPLE)
     add_definitions( -Wno-format-truncation -Wno-stringop-truncation )
   elseif(APPLE)
@@ -579,7 +581,7 @@ foreach(X ${TCC_X})
     if(${X} STREQUAL i386-win32
         OR ${X} STREQUAL x86_64-win32
         OR ${X} STREQUAL arm-wince)
-            set(CROSS_INCLUDE ${TCC_DIR}/include -I${TCC_DIR}/win32/include -I${TCC_DIR}/win32/include/winapi -DWIN32)
+            set(CROSS_INCLUDE ${TCC_DIR}/include -I${TCC_DIR}/win32/include -I${TCC_DIR}/win32/include/winapi)
     endif()
     add_executable(${tcc_cross} ${TCC_DIR}/tcc.c)
     target_compile_definitions(${tcc_cross} PUBLIC ${CROSS_TARGET})
@@ -661,20 +663,17 @@ add_subdirectory(tests)
 if(WIN32)
     file(GLOB WIN32_DEFS win32/lib/*.def)
     install(FILES ${WIN32_DEFS} DESTINATION lib)
-    install(FILES tcclib.h libtcc.h DESTINATION include)
-    install(DIRECTORY include/ DESTINATION include)
     install(DIRECTORY win32/include/ DESTINATION include)
     install(FILES tcc_prompt.bat DESTINATION ${CMAKE_INSTALL_DATADIR})
     install(FILES cmake_tcc.bat tcc_env.bat DESTINATION bin)
 else()
-    install(FILES libtcc.h tcclib.h DESTINATION include)
-    install(DIRECTORY include/ DESTINATION lib/tcc/include)
-    install(DIRECTORY win32/include/ DESTINATION lib/tcc/win32/include)
-    install(DIRECTORY include/ DESTINATION lib/tcc/win32/include)
+    install(DIRECTORY win32/include/ DESTINATION lib/tcc/win32)
     install(FILES cmake_tcc tcc_env tcc_prompt
         PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
         DESTINATION bin )
 endif()
 
+install(DIRECTORY include/ DESTINATION include)
+install(FILES libtcc.h tcclib.h DESTINATION include)
 install(FILES tcc.cmake DESTINATION share)
 install(FILES tinycc-docs.html DESTINATION ${CMAKE_INSTALL_DOCDIR})
