--- a/cmake_env.sh.in
+++ b/cmake_env.sh.in
@@ -2,7 +2,8 @@
 export LIBRARY_PATH=@CMAKE_INSTALL_PREFIX@/lib
 export C_INCLUDE_PATH=@CMAKE_INSTALL_PREFIX@/include
 export CPATH=@CMAKE_INSTALL_PREFIX@/bin
-export CMAKE_C_COMPILER=@CMAKE_INSTALL_PREFIX@/tcc
+export CMAKE_C_COMPILER="$CPATH"/tcc
 export CC=$CMAKE_C_COMPILER
 export CMAKE_TOOLCHAIN_FILE=@CMAKE_INSTALL_PREFIX@/share/tcc.cmake
+export PATH="$PATH:$CPATH"
 bash
